One more deprecated method fixed.
This is a partial "fix" for #21